# PipeMic

./: .gitignore  .tool-versions  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci-build-release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: LICENSE_AND_THIRD_PARTY_NOTICES.txt
src-tauri/nsis/: installer-hooks.nsh  installer-template.nsi
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  single_instance.rs
src-tauri/src/audio/: capture.rs  devices.rs  engine.rs  mixer.rs  mod.rs  render.rs  sessions.rs  types.rs  wasapi_io.rs  windows_wasapi.rs
src/components/app/: AppHeader.tsx  OutputPanel.tsx  SettingsDialog.tsx  SourcesPanel.tsx  source-labels.ts
src/components/mixer/: DeviceSelect.tsx  LevelMeter.tsx  SourceStrip.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  toast.tsx  tooltip.tsx
src/lib/: api.ts  hotkeys.ts  utils.ts
tools/: version-bump.mjs
