[package]
name = "pipemic"
version = "1.6.1"
description = "PipeMic desktop audio router"
authors = ["Nuzair46"]
license = "MIT"
edition = "2024"

[features]
default = ["app"]
app = ["dep:tauri", "dep:tauri-plugin-global-shortcut"]

[lib]
name = "pipemic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pipemic"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.0", features = ["tray-icon"], optional = true }
tauri-plugin-global-shortcut = { version = "2.2.0", optional = true }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
  "implement",
  "Win32_Devices_Properties",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_Security",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell_PropertiesSystem"
] }
